# hive

./: .gitignore  AGENTS.md  GEMINI.md  README.md  pyproject.toml  skills-lock.json  test_report.md
.agents/skills/textual-tui/assets/: dashboard_app.py  todo_app.py  worker_demo.py
.agents/skills/ui-ux-pro-max/data/: _sync_all.py
.agents/skills/ui-ux-pro-max/scripts/: design_system.py  search.py
.beads/: interactions.jsonl  issues.jsonl  metadata.json
src/hive/: __init__.py  crud.py  database.py  main.py  models.py  templates.py  tui.py  utils.py
tests/: test_cli.py  test_db.py  test_tui.py
