[project]
name = "hive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samarth", email = "samarthghante.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "textual>=8.2.7",
    "typer>=0.26.7",
]
[project.scripts]
hive = "hive.main:app"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
